[gd_scene load_steps=2 format=3 uid="uid://csummary001"]

[ext_resource type="Script" path="res://src/ui/SummaryScreen.gd" id="1_script"]

[node name="SummaryScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "MISSION REPORT"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Score: 0"
horizontal_alignment = 1

[node name="KillsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Kills: 0"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Deploy Again"

[node name="MenuButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Return to Base"

[connection signal="pressed" from="VBoxContainer/RestartButton" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="VBoxContainer/MenuButton" to="." method="_on_menu_pressed"]
